[tool.poetry]
name = "leetcode-storybook"
version = "0.1.0"
description = ""
authors = ["psychobolt <560721+psychobolt@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "7.1.2"
pytest-cov = "3.0.0"
pylint = "2.14.5"
flake8 = "4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
