[tool.poetry]
name = "leetcode-storybook"
version = "0.1.0"
description = ""
authors = ["psychobolt <560721+psychobolt@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "7.1.3"
pytest-cov = "4.1.0"
pylint = "2.17.3"
flake8 = "5.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
